[package]
name = "openmls_rust_crypto"
authors = ["OpenMLS Authors", "Joseph Lukefahr"]
version = "0.4.0"
edition = "2021"
description = "OpenMLS crypto provider based on RustCrypto but modified for research"
license = "MIT"
documentation = "https://docs.rs/openmls_rust_crypto"
repository = "https://github.com/openmls/openmls/tree/main/openmls_rust_crypto"
readme = "README.md"

[dependencies]
aead = "0.5"
aes-gcm = "0.10"
ascon-aead = "0.4"
ascon-hash = "0.2"
chacha20poly1305 = "0.10"
digest = "0.10"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
hkdf = "0.12"
hpke-rs = { path = "../hpke-rs", features = ["hazmat"] }
hpke-rs-crypto = { path = "../hpke-rs/traits" }
hpke-rs-rust-crypto = { path = "../hpke-rs/rust_crypto_provider" }
openmls_traits = { path = "../openmls/traits" }
p256 = "0.13"
rand_core = "0.6"
sha2 = "0.10"
signature = "2.2"
tls_codec = "0.4"

[lints.rust]
future_incompatible = "warn"
let_underscore = "warn"
missing_docs = "warn"
rust_2021_compatibility = "warn"
unused = "warn"

[lints.clippy]
cargo = "warn"
